# platform-sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cross-build-stm.yml
cmake/cross-file/: stm32f1.cmake
cmake/toolchains/: arm-none-eabi.cmake
cmake/version/: version.hpp.in
src/: main.cpp
src/platform/stm32f1/: hw.cpp
src/platform/stm32f1/system/: stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h
